--- a/layers/transportation/transportation.yaml
+++ b/layers/transportation/transportation.yaml
@@ -128,7 +128,7 @@ layer:
   datasource:
     geometry_field: geometry
     srid: 900913
-    query: (SELECT geometry, class, subclass, oneway, ramp, brunnel, service, ref, ref_length, name, name_de, name_en, layer, level, indoor, surface FROM layer_transportation(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT geometry, class, subclass, oneway, ramp, brunnel, service, ref, ref_length, shield, name, name_de, name_en, layer, level, indoor, surface FROM layer_transportation(!bbox!, z(!scale_denominator!))) AS t
 schema:
   - ./class.sql
   - ./update_transportation_merge.sql
